# gemini-for-github

./: .gitignore  DEVELOPING.md  Dockerfile  OVERVIEW.md  README.md  action.yml  goal.md  pyproject.toml
.github/workflows/: gemini-issue-bug-report-triage.yml  gemini-issue-comment.yml  gemini-issue-question-triage.yml  gemini-pr-comment.yml  gemini-pull-request.yml  gemini-review.yml  gemini-review.yml.disabled
cloned_repo/: .gitignore  prepare.sh
src/gemini_for_github/: __init__.py  main.py
src/gemini_for_github/actions/: handler.py
src/gemini_for_github/clients/: aider.py  filesystem.py  gemini.py  genai.py  git.py  github.py  mcp.py  multitool.py  project.py  web.py
src/gemini_for_github/config/: config.py  default.yaml
src/gemini_for_github/errors/: aider.py  filesystem.py  genai.py  git.py  github.py  main.py  mcp.py  web.py
src/gemini_for_github/shared/: logging.py
src/gemini_for_github/tools/: filesystem_tools.py  github_tools.py
tests/: test_aider_client.py  test_e2e.py  test_filesystem_client.py  test_integration.py  test_web_client.py
tests/clients/: test_github_api_client.py
tests/config/: test_prompt_manager.py
tests/github/workflows/: test_gemini_review.py
tests/main/: test_main.py
tests/reviewers/: test_base_reviewer.py
tests/tools/: test_filesystem_tools.py  test_github_tools.py
